--- a/Employee_Appraisal_form/eaf.html
+++ b/Employee_Appraisal_form/eaf.html
@@ -14,7 +14,7 @@
 
 <Body onload="todayDate(),Time_duration()"> 
     <!--link name for 'top button'-->
-    <a name="TOP">
+    <a name="TOP"></a>
 
     <!--stating what this page is about-->
     <header size="9"> 
